- Add Home, Insert, Delete, End, Page Up/Down, ctrl left/right keys to console.
- Add Daap/Firefly advanced options.
- Add aio_pthread streams_xattr acl_xattr.
- Add zfsacl default setting.
- Add inherit acls on SMB share.
- Add Ukrainian translation to webgui.
- Add encrypt/decrypt password in System|Backup/Restore.
- Add service Samba Active Directory Domain Controller.
- Create 4KB(ashift=12) ZFS pool by default.
- Improve software raid info pages with Ajax.
- Increase upload size in Webserver service up to 16GiB. (websrv_maxrequestsize)
- Support aclinherit/aclmode ZFS properties.
- Use SHA-512 crypt password for admin. (WebGUI login and all services)
- Use SHA-512 crypt password File Manager.
- Upgrade tzdata to 2015d.
- Upgrade mDNSResponder to 567.
- Upgrade msmtp to 1.6.2.
- Upgrade tmux to 2.0.
- Upgrade php to 5.6.9.
- Upgrade bash 4.3 to patch 39.
- Upgrade samba to 4.1.18.
- Upgrade nut to 2.7.3.
- Upgrade jQuery to 1.11.3.
- Upgrade inadyn-mt to 02.24.46.
- Upgrade smartmontools to 6.4.
- Upgrade proftpd to 1.3.5a.

Fixes:
- missing iconv related files.
- don't remove user swap on same location of default swap.
- missing libftdi in lcdproc.
- broken extension menu in filemanager.
- missing translation in OPT/LAN interface.
- AFP share is not shown in Time Machine.
- start service ntpdate.
- show default swap on Diagnostics|Information|Swap.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature: